# TaskMgr

./: CMakeLists.txt
Design/: Task_Mgr.drawio
Src/: CMakeLists.txt  main.cpp  test.cpp
Src/Common/DesignPattern/ObserverPattern/: Display.hpp  Observer.hpp  Subject.cpp  Subject.hpp
Src/Common/LogSystem/: CMakeLists.txt  LogSystem.cpp  LogSystem.hpp
Src/Function/ProgramerStatus/: CMakeLists.txt  ProgramerShow.cpp  ProgramerShow.hpp  ProgramerStatus.cpp  ProgramerStatus.hpp
